objects/Training_Location__c.object
<CustomObject><fields>
        <fullName>Accomodations__c</fullName>
        <label>Accomodations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Locations</relationshipLabel>
        <relationshipName>Training_Locations</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Admin_Contact__c</fullName>
        <inlineHelpText>Admin Contact, Phone number and Email Address</inlineHelpText>
        <label>Admin Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Cancellation_Lead_Time__c</fullName>
        <inlineHelpText>Number of days before event that venue must be cancelled</inlineHelpText>
        <label>Cancellation Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Country_Code_State_Code__c</fullName>
        <description>Store the state code and country code.</description>
        <label>Country Code -  State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Country_Code__c</fullName>
        <description>Store the country Code.</description>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Directions__c</fullName>
        <label>Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Location_Email__c</fullName>
        <label>Location Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Location_Fax__c</fullName>
        <label>Location Fax</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Location_Id__c</fullName>
        <displayFormat>location-{000000}</displayFormat>
        <label>Location Id</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>Location_Name_Latin__c</fullName>
        <label>Location Name (Latin)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Location_Name__c</fullName>
        <description>Show the location as according to the region regions.</description>
        <formula>IF(ISPICKVAL(Region__c,'AMER'),City__c +', '+State__c +', '+Country__c ,City__c +', '+Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Location_Phone__c</fullName>
        <label>Location Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Site</fullName>
                </value>
                <value>
                    <fullName>3rd Party Training Center</fullName>
                </value>
                <value>
                    <fullName>Corporate Training Center</fullName>
                </value>
                <value>
                    <fullName>Conference Center</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Location_URL__c</fullName>
        <inlineHelpText>Location URL Link to description of the course</inlineHelpText>
        <label>Location URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Publish_To_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish To Web</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Room_Name__c</fullName>
        <label>Classroom</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Send_to_TDS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be used to send the data to TDS when needed in case of integration issues and for intial data load.</description>
        <label>Send to TDS</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Siebel_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Source_Table__c</fullName>
        <formula>'Location'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Table</label>
        <type>Text</type>
    </fields><fields>
        <fullName>State_Code__c</fullName>
        <description>Store the state code.</description>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Mark for Deletion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Technical_Contact__c</fullName>
        <inlineHelpText>Technical Contact Name, Phone Number and Email</inlineHelpText>
        <label>Technical Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Training_Time_Zone</valueSetName>
        </valueSet>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>Training_Location</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Training Location</label><nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Training Locations</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address_Line_1__c</columns>
        <columns>Address_Line_2__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Publish_To_Web__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Cancellation_Lead_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><validationRules>
        <fullName>Address_Completion_PTW</fullName>
        <active>false</active>
        <description>Restricting from publishing to web if the address is not complete</description>
        <errorConditionFormula>AND
  (
     AND
       (
         OR
          ( 
             ISNEW()
            ,ISCHANGED(Publish_To_Web__c)
          )
          ,Publish_To_Web__c = True
       ),
     OR(
          ISBLANK(Address_Line_1__c) 
         ,ISBLANK(City__c)
         ,ISBLANK(Postal_Code__c) 
         ,ISBLANK(Country__c)
       )
   )</errorConditionFormula>
        <errorMessage>Address Line 1, City, Postal Code and Country are required before publishing</errorMessage>
    </validationRules></CustomObject>